Add Azure_BlobStorage folder with files

--- a/Azure_BlobStorage/practice.ipynb
+++ b/Azure_BlobStorage/practice.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "connection_string = \"DefaultEndpointsProtocol=https;AccountName=weekstatus;AccountKey=HHLN2dzHFRiDvs6N5SypUSA0RV6QZ1kT5GRgu0dHrAAB0wBy6IZdhhNs2iA5M6iPiaj04egxxMHh+AStH0nqrQ==;EndpointSuffix=core.windows.net\"\n",
+    "connection_string = \"\"\n",
     "blob_service_client = BlobServiceClient.from_connection_string(connection_string)"
    ]
   },
@@ -113,7 +113,7 @@
     "from azure.storage.blob import BlobServiceClient\n",
     "\n",
     "\n",
-    "connection_string = \"DefaultEndpointsProtocol=https;AccountName=weekstatus;AccountKey=HHLN2dzHFRiDvs6N5SypUSA0RV6QZ1kT5GRgu0dHrAAB0wBy6IZdhhNs2iA5M6iPiaj04egxxMHh+AStH0nqrQ==;EndpointSuffix=core.windows.net\"\n",
+    "connection_string = \"\"\n",
     "blob_service_client = BlobServiceClient.from_connection_string(connection_string)\n",
     "\n",
     "\n",
