--- a/Azure_BlobStorage/practice.ipynb
+++ b/Azure_BlobStorage/practice.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,11 +28,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "connection_string = \"\"\n",
+    "connection_string = \"connection string\"\n",
     "blob_service_client = BlobServiceClient.from_connection_string(connection_string)"
    ]
   },
@@ -113,7 +113,7 @@
     "from azure.storage.blob import BlobServiceClient\n",
     "\n",
     "\n",
-    "connection_string = \"\"\n",
+    "connection_string = \"Connection String\"\n",
     "blob_service_client = BlobServiceClient.from_connection_string(connection_string)\n",
     "\n",
     "\n",
