Azure blob storage

--- a/Azure_BlobStorage/practice.ipynb
+++ b/Azure_BlobStorage/practice.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "connection_string = \"connection string\"\n",
+    "connection_string = \"connection_string\"\n",
     "blob_service_client = BlobServiceClient.from_connection_string(connection_string)"
    ]
   },
@@ -50,7 +50,7 @@
    "outputs": [],
    "source": [
     "# make new container for every connection string.\n",
-    "container_name = \"mycontainer\""
+    "container_name = \"container_name\""
    ]
   },
   {
@@ -117,7 +117,7 @@
     "blob_service_client = BlobServiceClient.from_connection_string(connection_string)\n",
     "\n",
     "\n",
-    "container_name = \"mycontainer\"  \n",
+    "container_name = \"container_name\"  \n",
     "container_client = blob_service_client.get_container_client(container_name)\n",
     "\n",
     "blob_list = container_client.list_blobs()\n",
